--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^7.0@dev",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "guzzlehttp/guzzle": "^7.0@dev"
-
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
